test/negative/107_no_function_body.fx
// expect: body
fun f()
println(0)
