test/negative/107_no_function_body.err
107_no_function_body.fx:3:1: error: '=' or '{' is expected before the function body
 3 | println(0)
   | ^~~~~~~
